# mockgres

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  mockgres.go  mockgres_test.go
mockgres/: Cargo.toml  merged_output.txt
mockgres/src/: advisory_locks.rs  binder.rs  catalog.rs  db.rs  engine.rs  handler.rs  lib.rs  parser.rs  session.rs  storage.rs  txn.rs  types.rs
mockgres/src/binder/: expr.rs  mod.rs  returning.rs  time.rs
mockgres/src/db/: coerce.rs  constraints.rs  create.rs  dml_delete.rs  dml_insert.rs  dml_update.rs  locks.rs  mod.rs  mvcc.rs  pg_type.rs  schema_ddl.rs  visibility.rs
mockgres/src/engine/: eval.rs  exec.rs  expr_plan.rs  mod.rs  types.rs
mockgres/src/engine/exec/: mod.rs  values.rs
mockgres/src/server/: config.rs  describe.rs  errors.rs  exec_builder.rs  insert.rs  mapping.rs  mockgres.rs  mod.rs  params.rs  statement_plan.rs
mockgres/src/server/exec/: ddl.rs  locks.rs  mod.rs  read.rs  set_show.rs  tx.rs  write_dml.rs
mockgres/src/server/exec/read/: subquery.rs
mockgres/src/sql/: cte.rs  ddl.rs  delete.rs  dml.rs  expr.rs  insert.rs  mod.rs  planner.rs  returning.rs  tokens.rs  update.rs
mockgres/tests/: advisory_lock.rs  alembic_foreign_keys.rs  alter_table.rs  app_flow.rs  binary_result_format.rs  casting.rs  common.rs  composite_keys.rs  create_insert_select.rs  cte_insert_delete.rs  cte_negative.rs  cte_protocol.rs  cte_select.rs  cte_update_from.rs  database_support.rs  drop_table.rs  empty_query.rs  for_update_skip_locked.rs  foreign_keys.rs  freeze_reset.rs  functions.rs  in_subquery.rs  index_ddl.rs  inner_join_on.rs  insert_column_list.rs  insert_numeric_coercion.rs  insert_on_conflict_do_nothing.rs  integration_reddit.rs  integration_task_queue.rs  joins.rs  json_type.rs  multi_statement_extended.rs  multi_statement_simple.rs  nan_and_null_ordering.rs  on_delete_cascade.rs  order_by_nulls_default.rs  order_expressions.rs  pg_tables.rs  pg_type.rs  postgres_compat_differences.rs  (+27 more)
protocol/: extended.go  session.go  simple.go
scripts/compat/: README.md  _common.sh  asyncpg_alembic.sh  asyncpg_basic.sh  go_pgx.sh  go_pgx_multi_protocol.sh  go_pq.sh  golang_migrate.sh  run_all.sh
util/: utils.go  utils_test.go
