[package]
name = "mockgres"
version = "0.0.9"
edition = "2024"
license = "MIT"
description = "An in-memory database that replicates a reasonable subset of Postgres functionality to make unit tests that rely on a database to run."
repository = "https://github.com/mockgres/mockgres"
readme = "README.md"

[lib]
name = "mockgres"
path = "src/lib.rs"

[[bin]]
name = "mockgres"
path = "src/bin/mockgres.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }
anyhow = "1"
pgwire = "0.37.0"
async-trait = "0.1"
futures = "0.3.31"
pg_query = "6.1.1"
parking_lot = "0.12.4"
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
dashmap = "5.5"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
anyhow = "1"
rand = "0.8.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
bytes = "1"
fallible-iterator = "0.2"
postgres-protocol = "0.6"
